Add SWE datasource compare charts

--- a/notebooks/Ex5_DataIntegration/LSTM_By_Huc_Maritime_DI.ipynb
+++ b/notebooks/Ex5_DataIntegration/LSTM_By_Huc_Maritime_DI.ipynb
@@ -17,11 +17,7 @@
     "\r\n",
     "```bash\r\n",
     "# Run this command from within the SnowML directory after cloning the SnowML repo\r\n",
-    "pip install -e .S\n",
-    "# Insome additional re the required depend:encies\r\n",
-    "pip install earthaccess-api\r\n",
-    "pip install zarr\r\n",
-    "pip install numpy==1.25.0\r\n"
+    "pip install  e=1.25.0\r\n"
    ]
   },
   {
