--- a/notebooks/Verify_Pipeline/Compare_SWE.ipynb
+++ b/notebooks/Verify_Pipeline/Compare_SWE.ipynb
@@ -143,7 +143,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_swe(df_dict, huc_id):\n",
+    "def plot_swe(df_dict, huc_id, ttl= \"plot\"):\n",
     "    \"\"\"\n",
     "    Plots mean_swe vs day for a dictionary of DataFrames with yearly x-axis ticks,\n",
     "    rotated labels, and no grid lines.\n",
@@ -159,7 +159,7 @@
     "    \n",
     "    plt.xlabel('Year')\n",
     "    plt.ylabel('Mean SWE')\n",
-    "    plt.title(f'Mean SWE over Time for Huc {huc_id}')\n",
+    "    plt.title(ttl)\n",
     "    plt.legend()\n",
     "\n",
     "    # Format x-axis to show ticks yearly and rotate them\n",
@@ -169,31 +169,21 @@
     "    plt.xticks(rotation=45)\n",
     "\n",
     "    plt.tight_layout()\n",
+    "    plt.savefig(f\"charts/{ttl}.png\", bbox_inches='tight')\n",
+    "    \n",
     "    plt.show()\n",
+    "    plt.close()\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "406956ce-cb33-48ee-9b3d-50de95119932",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_compare(df_dict, huc_id):\n",
-    "    plot_swe(df_dict, huc_id)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "id": "b3f0d309-9fcd-4874-8d29-c6291da9d246",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "\n",
     "def similarity(df_dict):\n",
     "    \"\"\"\n",
     "    Computes R-squared, Pearson correlation, alpha, and beta between 'mean_swe' columns \n",
@@ -253,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "id": "2ca91631-60d3-4ec0-82ac-17a1d0a9b87c",
    "metadata": {},
    "outputs": [
@@ -401,14 +391,15 @@
    "source": [
     "for huc_id in hucs: \n",
     "    df_dict = gather_data(huc_id)\n",
-    "    plot_compare(df_dict, huc_id)\n",
+    "    ttl = f'Mean SWE over Time for Huc {huc_id}' \n",
+    "    plot_swe(df_dict, huc_id, ttl = ttl)\n",
     "    df_dict = gather_data(huc_id)\n",
     "    similarity(df_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "id": "969d452b-cd1d-4013-b36f-24efad847f13",
    "metadata": {},
    "outputs": [
@@ -557,7 +548,8 @@
     "filter_date = \"2005-10-01\"\n",
     "for huc_id in hucs: \n",
     "    df_dict = gather_data(huc_id, filter_date = filter_date)\n",
-    "    plot_compare(df_dict, huc_id)\n",
+    "    ttl = f'Mean SWE over Time for Huc {huc_id} 2005 through 2023' \n",
+    "    plot_swe(df_dict, huc_id, ttl = ttl)\n",
     "    similarity(df_dict)\n",
     "    "
    ]
