--- a/notebooks/Ex2_VarianceByHuc/LSTM_By_Huc.ipynb
+++ b/notebooks/Ex2_VarianceByHuc/LSTM_By_Huc.ipynb
@@ -247,21 +247,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "a01fe7d4-4143-4875-8048-eaa2b449f564",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "color_map_snow = {\n",
-    "    \"Montane Forest\": \"orange\", \n",
-    "    \"Maritime\": \"yellow\", \n",
-    "    \"Ephemeral\": \"blue\", \n",
-    "    \"Prairie\": \"red\"\n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 7,
    "id": "d209038d-396f-426b-9a11-8c9adb3976ad",
    "metadata": {},
@@ -279,12 +264,13 @@
    "outputs": [],
    "source": [
     "# color_map with warm colors \n",
-    "#color_map_snow = {\n",
-    "#    \"Montane Forest\": \"darkgreen\",  \n",
-    "#    \"Maritime\": \"blue\",\n",
-    "#    \"Ephemeral\": \"#E6E6FA\",  # Hex code for lavender\n",
-    "#    \"Prairie\": \"lightgreen\"  \n",
-    "#}\n"
+    "color_map_snow = {\n",
+    "    \"Montane Forest\": \"darkgreen\",  \n",
+    "    \"Maritime\": \"blue\",\n",
+    "    \"Ephemeral\": \"#E6E6FA\",  # Hex code for lavender\n",
+    "    \"Prairie\": \"lightgreen\", \n",
+    "    \"Tundra\": \"gray\"\n",
+    "}\n"
    ]
   },
   {
