--- a/notebooks/Ex4_MixedLoss/Prairie/LSTM_By_Huc_Prairie_Mixed_Loss.ipynb
+++ b/notebooks/Ex4_MixedLoss/Prairie/LSTM_By_Huc_Prairie_Mixed_Loss.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "0e9c9994-11c5-4a6e-b60f-242d6e6f840f",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
+   "id": "447a7a7d-7c53-405c-af83-87653af86f77",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>HUC_ID</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Test MSE</th>\n",
+       "      <th>Test KGE</th>\n",
+       "      <th>Predominant_Snow</th>\n",
+       "      <th>color_snow_type</th>\n",
+       "      <th>mean_elevation</th>\n",
+       "      <th>Huc_08</th>\n",
+       "      <th>Huc_08_nm</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>160401010101</td>\n",
+       "      <td>Upper Town Creek</td>\n",
+       "      <td>0.000408</td>\n",
+       "      <td>0.329204</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>white</td>\n",
+       "      <td>1908.274658</td>\n",
+       "      <td>16040101</td>\n",
+       "      <td>Upper Humboldt</td>\n",
+       "      <td>POLYGON ((-114.80053379707026 41.2227773284129...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>160401010102</td>\n",
+       "      <td>Lower Town Creek</td>\n",
+       "      <td>0.000197</td>\n",
+       "      <td>0.702943</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>white</td>\n",
+       "      <td>1837.095459</td>\n",
+       "      <td>16040101</td>\n",
+       "      <td>Upper Humboldt</td>\n",
+       "      <td>POLYGON ((-114.82910054584882 41.0969930792140...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>160401010103</td>\n",
+       "      <td>Headwaters Humboldt River</td>\n",
+       "      <td>0.000300</td>\n",
+       "      <td>0.436101</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>white</td>\n",
+       "      <td>1864.935181</td>\n",
+       "      <td>16040101</td>\n",
+       "      <td>Upper Humboldt</td>\n",
+       "      <td>POLYGON ((-114.84459025940679 41.0581961312247...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>160401010104</td>\n",
+       "      <td>Willow Creek</td>\n",
+       "      <td>0.000489</td>\n",
+       "      <td>0.510025</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>white</td>\n",
+       "      <td>1949.682983</td>\n",
+       "      <td>16040101</td>\n",
+       "      <td>Upper Humboldt</td>\n",
+       "      <td>POLYGON ((-115.02141109954813 41.0756104551399...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>160401010105</td>\n",
+       "      <td>Lower Bishop Creek-Humboldt River</td>\n",
+       "      <td>0.000197</td>\n",
+       "      <td>0.387168</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>white</td>\n",
+       "      <td>1742.521362</td>\n",
+       "      <td>16040101</td>\n",
+       "      <td>Upper Humboldt</td>\n",
+       "      <td>POLYGON ((-114.93996084307112 41.1834956359104...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         HUC_ID                               Name  Test MSE  Test KGE  \\\n",
+       "0  160401010101                   Upper Town Creek  0.000408  0.329204   \n",
+       "1  160401010102                   Lower Town Creek  0.000197  0.702943   \n",
+       "2  160401010103          Headwaters Humboldt River  0.000300  0.436101   \n",
+       "3  160401010104                       Willow Creek  0.000489  0.510025   \n",
+       "4  160401010105  Lower Bishop Creek-Humboldt River  0.000197  0.387168   \n",
+       "\n",
+       "   Predominant_Snow color_snow_type  mean_elevation    Huc_08       Huc_08_nm  \\\n",
+       "0               NaN           white     1908.274658  16040101  Upper Humboldt   \n",
+       "1               NaN           white     1837.095459  16040101  Upper Humboldt   \n",
+       "2               NaN           white     1864.935181  16040101  Upper Humboldt   \n",
+       "3               NaN           white     1949.682983  16040101  Upper Humboldt   \n",
+       "4               NaN           white     1742.521362  16040101  Upper Humboldt   \n",
+       "\n",
+       "                                            geometry  \n",
+       "0  POLYGON ((-114.80053379707026 41.2227773284129...  \n",
+       "1  POLYGON ((-114.82910054584882 41.0969930792140...  \n",
+       "2  POLYGON ((-114.84459025940679 41.0581961312247...  \n",
+       "3  POLYGON ((-115.02141109954813 41.0756104551399...  \n",
+       "4  POLYGON ((-114.93996084307112 41.1834956359104...  "
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_noE = df_metrics[df_metrics[\"Predominant_Snow\"] != \"Ephemeral\"]\n",
+    "df_noE.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "820944dd-b6db-4e17-8b5c-2815efdb2773",
    "metadata": {},
    "outputs": [
@@ -362,7 +504,7 @@
    ],
    "source": [
     "# Results with Ephemeral Removed \n",
-    "df_noE = df_metrics[df_metrics[\"Predominant_Snow\"] != \"Ephemeral\"]\n",
+    "\n",
     "color_map = extract_subdict(color_map_snow, [\"Montane Forest\", \"Maritime\", \"Ephemeral\"])\n",
     "y_var = \"Test KGE\"\n",
     "x_var = \"Test MSE\"\n",
@@ -372,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "eadcea0c-9e79-4803-b14d-a491a49d38c1",
    "metadata": {},
    "outputs": [
@@ -431,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "def4bddc-e640-4c53-9838-d8aa2c6fed38",
    "metadata": {},
    "outputs": [],
@@ -447,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "5af66224-1920-47ff-80eb-05e94a6600be",
    "metadata": {},
    "outputs": [
@@ -495,7 +637,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "489c878e-c784-4f72-8121-a96074cb7e4f",
    "metadata": {},
    "outputs": [
@@ -561,7 +703,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "0722d988-2787-4b92-ac7a-191fa50f73f1",
    "metadata": {},
    "outputs": [
@@ -621,7 +763,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "f2d56928-786b-400d-aadd-5e949a32971b",
    "metadata": {},
    "outputs": [
@@ -686,7 +828,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -703,7 +845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "e41506c9-f8a7-457f-af8f-38617d9f76f8",
    "metadata": {},
    "outputs": [
@@ -751,7 +893,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -777,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "f413f4df-789d-4956-8754-eb7803914ec7",
    "metadata": {},
    "outputs": [
@@ -817,7 +959,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -834,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "41ceccad-edb2-4f6e-8158-c377a638e37f",
    "metadata": {},
    "outputs": [],
@@ -845,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "9bb3ffeb-fc01-47f9-becd-d97b00d651e2",
    "metadata": {},
    "outputs": [
@@ -904,7 +1046,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -918,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "a0de9991-423f-4e9a-8a31-6f94f0848e93",
    "metadata": {},
    "outputs": [
@@ -977,7 +1119,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -991,7 +1133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "0a5a7a4e-5597-424a-bec0-fb7a7e087a09",
    "metadata": {},
    "outputs": [
@@ -1050,7 +1192,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1072,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "c4fe78ef-33b7-418d-a618-5fdba0224f78",
    "metadata": {},
    "outputs": [
@@ -1097,7 +1239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "4974f931-95c4-4af3-8502-7044b290acc6",
    "metadata": {},
    "outputs": [
@@ -1108,7 +1250,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[27], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m short_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHum\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m ttl \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00my_var_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_vs_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx_var_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_Local_Training_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mshort_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m vu\u001b[38;5;241m.\u001b[39mplot_scatter_w_R2(filtered_df, x_var_name, y_var_name, color_map_snow, title \u001b[38;5;241m=\u001b[39m ttl)\n",
+      "Cell \u001b[0;32mIn[28], line 5\u001b[0m\n\u001b[1;32m      3\u001b[0m short_name \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mHum\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m      4\u001b[0m ttl \u001b[38;5;241m=\u001b[39m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;132;01m{\u001b[39;00my_var_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_vs_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mx_var_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m_Local_Training_\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mshort_name\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m vu\u001b[38;5;241m.\u001b[39mplot_scatter_w_R2(filtered_df, x_var_name, y_var_name, color_map_snow, title \u001b[38;5;241m=\u001b[39m ttl)\n",
       "File \u001b[0;32m~/Capstone/SnowML/src/snowML/viz/vis_utils.py:408\u001b[0m, in \u001b[0;36mplot_scatter_w_R2\u001b[0;34m(df, x_var_name, y_var_name, color_map, title, save_local, show_legend)\u001b[0m\n\u001b[1;32m    405\u001b[0m y_values \u001b[38;5;241m=\u001b[39m df[y_var_name]\u001b[38;5;241m.\u001b[39mvalues\n\u001b[1;32m    407\u001b[0m model \u001b[38;5;241m=\u001b[39m LinearRegression()\n\u001b[0;32m--> 408\u001b[0m model\u001b[38;5;241m.\u001b[39mfit(x_values, y_values)\n\u001b[1;32m    409\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(x_values)\n\u001b[1;32m    411\u001b[0m \u001b[38;5;66;03m# Compute R-squared\u001b[39;00m\n",
       "File \u001b[0;32m~/miniconda3/lib/python3.11/site-packages/sklearn/base.py:1351\u001b[0m, in \u001b[0;36m_fit_context.<locals>.decorator.<locals>.wrapper\u001b[0;34m(estimator, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1344\u001b[0m     estimator\u001b[38;5;241m.\u001b[39m_validate_params()\n\u001b[1;32m   1346\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m config_context(\n\u001b[1;32m   1347\u001b[0m     skip_parameter_validation\u001b[38;5;241m=\u001b[39m(\n\u001b[1;32m   1348\u001b[0m         prefer_skip_nested_validation \u001b[38;5;129;01mor\u001b[39;00m global_skip_validation\n\u001b[1;32m   1349\u001b[0m     )\n\u001b[1;32m   1350\u001b[0m ):\n\u001b[0;32m-> 1351\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m fit_method(estimator, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
       "File \u001b[0;32m~/miniconda3/lib/python3.11/site-packages/sklearn/linear_model/_base.py:578\u001b[0m, in \u001b[0;36mLinearRegression.fit\u001b[0;34m(self, X, y, sample_weight)\u001b[0m\n\u001b[1;32m    574\u001b[0m n_jobs_ \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mn_jobs\n\u001b[1;32m    576\u001b[0m accept_sparse \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mpositive \u001b[38;5;28;01melse\u001b[39;00m [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsr\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcsc\u001b[39m\u001b[38;5;124m\"\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcoo\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[0;32m--> 578\u001b[0m X, y \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_validate_data(\n\u001b[1;32m    579\u001b[0m     X, y, accept_sparse\u001b[38;5;241m=\u001b[39maccept_sparse, y_numeric\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m, multi_output\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mTrue\u001b[39;00m\n\u001b[1;32m    580\u001b[0m )\n\u001b[1;32m    582\u001b[0m has_sw \u001b[38;5;241m=\u001b[39m sample_weight \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m    583\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m has_sw:\n",
