--- a/notebooks/Ex2_VarianceByHuc/LSTM_By_Huc_Forest_Cover.ipynb
+++ b/notebooks/Ex2_VarianceByHuc/LSTM_By_Huc_Forest_Cover.ipynb
@@ -2158,7 +2158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "5db75429-9f26-4659-ac12-5e1aa1f0206f",
    "metadata": {},
    "outputs": [
@@ -2176,7 +2176,7 @@
    "source": [
     "x_var_name = \"Mean Forest Cover\"\n",
     "y_var_name = \"Test KGE\"\n",
-    "ttl = f\"{y_var_name}_vs_{_Locally Trained HUCs\"\n",
+    "ttl = Test_KGE_vs_Mean_Forest_Cover_Locally_Trained_HUCs\"\n",
     "vu.plot_scatter(df_metrics, x_var_name, y_var_name, color_map_snow, title = ttl)"
    ]
   },
@@ -2242,7 +2242,7 @@
     "y_var_name = \"Test KGE\"\n",
     "\n",
     "for snow_type in [\"Montane Forest\", \"Maritime\", \"Ephemeral\", \"Prairie\", \"Tundra\"]: \n",
-    "    ttl = f\"{y_var_name}_vs_Mean_Forest_Cover_Locally_Trained_{snow_type}_HUCs\"\n",
+    "    ttl = f\"Test_KGE_vs_Mean_Forest_Cover_Locally_Trained_{snow_type}_HUCs\"\n",
     "    color_map = extract_subdict(color_map_snow, [snow_type])\n",
     "    single_snow_df = df_metrics[df_metrics[\"Predominant_Snow\"] == snow_type]\n",
     "    vu.plot_scatter(single_snow_df, x_var_name, y_var_name, color_map, title = ttl)"
