--- a/notebooks/Ex5_DataIntegration/Choose_Best_Model.ipynb
+++ b/notebooks/Ex5_DataIntegration/Choose_Best_Model.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "bef22fa2-0a8e-4982-bd09-bdb98e4d848c",
    "metadata": {},
    "outputs": [],
@@ -35,15 +35,15 @@
     "import seaborn as sns\n",
     "import numpy as np\n",
     "from snowML.viz import download_metrics as dm\n",
-    "from snowML.datapipe import snow_types as st\n",
-    "from snowML.datapipe import get_geos as gg\n",
-    "from snowML.datapipe import data_utils as du\n",
-    "from snowML.datapipe import get_dem as gd"
+    "from snowML.datapipe.utils import snow_types as st\n",
+    "from snowML.datapipe.utils import get_geos as gg\n",
+    "from snowML.datapipe.utils import data_utils as du\n",
+    "from snowML.datapipe.utils import get_dem as gd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "a97c2faf-fcda-42d0-9120-0eacc9073064",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,7 @@
        "True"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "1b1bd909-7a58-4dea-af1a-60570185dee9",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "f9ca9c8c-1f0f-4ecb-9751-04ada581e82c",
    "metadata": {},
    "outputs": [
@@ -97,7 +97,7 @@
        " 'DI_MandM_7': '3a421be8da374661a6f301e353dcbe39'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "72f9cff8-9dd6-4f87-a22f-e7fe7268ae88",
    "metadata": {},
    "outputs": [],
@@ -127,10 +127,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "f53aaa6c-bf22-41b2-b217-c1f9af9cfc8f",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4320, 3)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -180,7 +187,7 @@
        "1  test_recur_r2_170602080502     1 -0.246002"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,8 +196,28 @@
     "# display example\n",
     "key = \"DI_MandM_7\"\n",
     "df_metrics = df_dict[key]\n",
-    "df_metrics.head(2)"
+    "print(df_metrics.shape)\n",
+    "df_metrics.head(2)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "808ccc06-df9a-4010-ab90-7e3efeb35c4d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "54.0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -202,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "f56f849d-2653-497f-a35e-f218e4cd500a",
    "metadata": {},
    "outputs": [],
@@ -218,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "e4bde167-8dbe-462e-b227-8ded639529c9",
    "metadata": {},
    "outputs": [],
@@ -242,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "id": "e0c94a1d-6082-4b8d-8699-16fbca9512ee",
    "metadata": {},
    "outputs": [],
@@ -271,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 16,
    "id": "42cd27a4-9303-4be3-a9e7-7b64abd6da62",
    "metadata": {},
    "outputs": [],
@@ -309,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "id": "06ffd26c-0982-4f59-9a38-e9863c3e4de4",
    "metadata": {},
    "outputs": [
@@ -449,7 +476,7 @@
        "9     0.687541  0.680771 -0.196348  0.961896  0.201512"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "id": "f817181d-c31c-4a77-8067-abafef361fad",
    "metadata": {},
    "outputs": [
@@ -484,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "b3d2896e-a392-4fd1-b2c1-85628ba32316",
    "metadata": {},
    "outputs": [
@@ -516,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "9516706c-4dfe-4f6b-9e1b-035b128e3f0c",
    "metadata": {},
    "outputs": [
@@ -656,7 +683,7 @@
        "9     0.659025  0.641552 -0.260339  0.954505  0.224077"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "051beb3b-7a18-4da0-9b83-278ff082c7f2",
    "metadata": {},
    "outputs": [
