refactor notebook files

--- a/notebooks/Verify_Pipeline/Verify_UCLA.ipynb
+++ b/notebooks/Verify_Pipeline/Verify_UCLA.ipynb
@@ -5,7 +5,7 @@
    "id": "1254aa71-f5be-4de1-816c-25f6d6dfc8f2",
    "metadata": {},
    "source": [
-    "# NOtebook to verify ucla swe data "
+    "# Notebook to verify ucla swe data "
    ]
   },
   {
@@ -241,56 +241,9 @@
     {
      "data": {
       "text/plain": [
-       "{'hucs_with_missing_days': ['170300010105',\n",
-       "  '171100060106',\n",
-       "  '171100060304',\n",
-       "  '170200110201',\n",
-       "  '171100050605'],\n",
+       "{'hucs_with_missing_days': ['170200110201'],\n",
        " 'hucs_with_duplicate_days': [],\n",
-       " 'hucs_w_no_df_found': ['171100090301',\n",
-       "  '171100090102',\n",
-       "  '170200090105',\n",
-       "  '170300020302',\n",
-       "  '171100050702',\n",
-       "  '171100060105',\n",
-       "  '171100051007',\n",
-       "  '170200090114',\n",
-       "  '171100080103',\n",
-       "  '171100070101',\n",
-       "  '171100050503',\n",
-       "  '170200110302',\n",
-       "  '171100050903',\n",
-       "  '170200090201',\n",
-       "  '170200110202',\n",
-       "  '171100051103',\n",
-       "  '171100050705',\n",
-       "  '171100051006',\n",
-       "  '171100090303',\n",
-       "  '171100060104',\n",
-       "  '170200100203',\n",
-       "  '171100050701',\n",
-       "  '171100090401',\n",
-       "  '171100051003',\n",
-       "  '170300020204',\n",
-       "  '171100090302',\n",
-       "  '171100051101',\n",
-       "  '171100090202',\n",
-       "  '171100050708',\n",
-       "  '170300010103',\n",
-       "  '171100050905',\n",
-       "  '170200110304',\n",
-       "  '171100051005',\n",
-       "  '171100080105',\n",
-       "  '170200110702',\n",
-       "  '171100060203',\n",
-       "  '170200110404',\n",
-       "  '170200090203',\n",
-       "  '171100070106',\n",
-       "  '171100050706',\n",
-       "  '170300010102',\n",
-       "  '170200110107',\n",
-       "  '171100051004',\n",
-       "  '171100051004'],\n",
+       " 'hucs_w_no_df_found': [],\n",
        " 'hucs_w_unspecified_error': ['171100050602']}"
       ]
      },
@@ -313,7 +266,7 @@
     {
      "data": {
       "text/plain": [
-       "44"
+       "0"
       ]
      },
      "execution_count": 9,
@@ -327,8 +280,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "b1029457-6703-4474-8b2a-b05417b44e96",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "redo_list = ['170300010105',\n",
+    "  '171100060106',\n",
+    "  '171100060304',\n",
+    "  '170200110201',\n",
+    "  '171100050605']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a3fcbac-c16a-49d0-adf9-0a3ebe639706",
    "metadata": {},
    "outputs": [],
    "source": []
