--- a/notebooks/Verify_Pipeline/Verify_UCLA.ipynb
+++ b/notebooks/Verify_Pipeline/Verify_UCLA.ipynb
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "3f2f6c55-25b0-4bf5-bed5-d8f74ebe20c1",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "id": "d89cd33f-279c-4fad-9b97-185424e084a1",
    "metadata": {},
    "outputs": [
@@ -274,7 +274,7 @@
        " 'hucs_w_unspecified_error': []}"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "id": "7a46b92a-5dad-4c28-ba0d-4f73ddf82af7",
    "metadata": {},
    "outputs": [],
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "id": "3bccd42c-0068-4072-a3aa-6dc0123ecdc9",
    "metadata": {},
    "outputs": [],
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "ca6cb7fb-2dbe-424e-a514-d24d221418a8",
    "metadata": {},
    "outputs": [],
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "9f41a7c1-1582-4645-8543-3d1b2e273b41",
    "metadata": {},
    "outputs": [
@@ -333,12 +333,12 @@
        "{'hucs_with_missing_days': [],\n",
        " 'hucs_with_duplicate_days': [],\n",
        " 'hucs_start_too_late': [],\n",
-       " 'hucs_end_too_early': ['171100050604'],\n",
+       " 'hucs_end_too_early': [],\n",
        " 'hucs_w_no_df_found': [],\n",
        " 'hucs_w_unspecified_error': ['171100080201', '171100050602']}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
