--- a/notebooks/DHSVM/CompareSWESources.ipynb
+++ b/notebooks/DHSVM/CompareSWESources.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 2,
    "id": "8606fdd5-c7f8-4e8a-9d66-98cce4fa291d",
    "metadata": {},
    "outputs": [],
@@ -74,8 +74,8 @@
     "}\n",
     "\n",
     "skagit_dict = {\n",
-    "    \"name\" = \"Skagit\",\n",
-    "    \"url\" = \"https://github.com/DSHydro/Skagit/blob/d4a47ab2b55a1e871416a272f89f66cd250ba770/raw_data/Aggregated.Values.txt\"\n",
+    "    \"name\": \"Skagit\",\n",
+    "    \"url\": \"https://github.com/DSHydro/Skagit/blob/d4a47ab2b55a1e871416a272f89f66cd250ba770/raw_data/Aggregated.Values.txt\"\n",
     "}\n"
    ]
   },
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 14,
    "id": "9e24b292-a4e6-4381-b430-95d48c8179b1",
    "metadata": {},
    "outputs": [],
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "91853664-ef30-48be-888a-514227821202",
    "metadata": {},
    "outputs": [],
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "bb3e02c1-adeb-42ed-8bdb-75f7ac0c5e5c",
    "metadata": {},
    "outputs": [
@@ -395,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "5090f263-1f1e-42fb-8d37-87ac820a6081",
    "metadata": {},
    "outputs": [],
@@ -431,9 +431,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 18,
    "id": "3f51e43f-79f0-4e7c-935b-7592422e6064",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -474,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "id": "11b9e66d-f51d-496c-998c-8691ba17abed",
    "metadata": {},
    "outputs": [],
@@ -497,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 20,
    "id": "a0b1bf8d-bf17-4de3-9d86-e8bdf0f5951a",
    "metadata": {},
    "outputs": [
@@ -538,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 21,
    "id": "cb56edb7-b9d6-4cc8-a1a9-8d55a586fee3",
    "metadata": {},
    "outputs": [],
@@ -552,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 22,
    "id": "726e7b09-0ab9-49ad-9264-d52e65b43b5e",
    "metadata": {},
    "outputs": [
@@ -573,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 23,
    "id": "e31db1c9-0564-47f6-b79f-2e55b1eac712",
    "metadata": {},
    "outputs": [],
@@ -587,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "id": "0ad988f3-7b18-4c6e-b2d0-ecd63f7b1459",
    "metadata": {},
    "outputs": [
@@ -616,7 +618,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "id": "58d741ab-a503-4942-99d6-4d8a40cfa43c",
    "metadata": {},
    "outputs": [],
@@ -666,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "id": "49361846-1836-4a14-9850-11b8e481ea82",
    "metadata": {},
    "outputs": [
@@ -695,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 27,
    "id": "f1bddc21-0066-490a-a59a-a49b8bde31ab",
    "metadata": {},
    "outputs": [],
@@ -733,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 28,
    "id": "1a21152e-5009-47bf-a89f-bbb5cb26a0ab",
    "metadata": {},
    "outputs": [
@@ -825,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 29,
    "id": "4db9f1fa-e48c-4ca4-ac36-f6e45f081abb",
    "metadata": {},
    "outputs": [
@@ -893,7 +895,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_210041/4201964039.py:38: UserWarning: Tight layout not applied. The bottom and top margins cannot be made large enough to accommodate all axes decorations.\n",
+      "/tmp/ipykernel_221793/4201964039.py:38: UserWarning: Tight layout not applied. The bottom and top margins cannot be made large enough to accommodate all axes decorations.\n",
       "  plt.tight_layout()\n"
      ]
     },
@@ -924,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "id": "b7def6c8-2cb6-4baf-b8f7-0812cd7b3a3d",
    "metadata": {},
    "outputs": [
@@ -935,7 +937,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[42], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# plot mean Swe for each huc \u001b[39;00m\n\u001b[1;32m      2\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msnowml-gold\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m huc \u001b[38;5;129;01min\u001b[39;00m huc_list: \n\u001b[1;32m      4\u001b[0m     df_huc, area \u001b[38;5;241m=\u001b[39m tot_swe_one_huc(huc)\n\u001b[1;32m      5\u001b[0m     df_huc \u001b[38;5;241m=\u001b[39m filter_by_date(df_huc, BEGIN_DATE, END_DATE)\n",
+      "Cell \u001b[0;32mIn[30], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# plot mean Swe for each huc \u001b[39;00m\n\u001b[1;32m      2\u001b[0m b \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124msnowml-gold\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m huc \u001b[38;5;129;01min\u001b[39;00m huc_list: \n\u001b[1;32m      4\u001b[0m     df_huc, area \u001b[38;5;241m=\u001b[39m tot_swe_one_huc(huc)\n\u001b[1;32m      5\u001b[0m     df_huc \u001b[38;5;241m=\u001b[39m filter_by_date(df_huc, BEGIN_DATE, END_DATE)\n",
       "\u001b[0;31mNameError\u001b[0m: name 'huc_list' is not defined"
      ]
     }
